# kid-agent

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  PROJECT-STATUS.md  README.md  docker-compose.yml  e2e_test.py  pyproject.toml  requirements.txt  web_app.py
config/: .env.example  .env.production
config/prompts/: diagnose.md  g12-知识点生成-prompt.md  g345-知识点扩充-prompt.md  g6-知识点生成-prompt.md  quiz_gen.md  tutor.md
deploy/: kid-agent.service  nginx-kid-agent.conf
docs/: CURRICULUM-REFERENCE.md  DEPLOY.md  KNOWLEDGE-BASE-DESIGN.md  README.md  REFERENCES.md  SEED-DATA-STATUS.md
docs/prompts/: g7-知识点生成-prompt.md  g89-知识点生成-prompt.md  k12审查-prompt.md
docs/reports/: K12扩展方案-20260520.md  bug修复方案.md  g12-执行结果.md  g345-执行结果.md  g6-执行结果.md  g7-执行结果.md  g89-执行结果.md  kid-agent审查结果.md  phase2-方案.md  phase3-方案.md  phase4-方案.md  phase5-方案.md
docs/research/: GenericAgent-深度分析-20260520.md
scripts/: deploy.sh  generate_embeddings.py  generate_exercises.py  install.sh  rebuild_fts.py  start.sh  sync_fts.py
src/: __init__.py  main.py
src/agent/: __init__.py  intent.py  planner.py  roster.py  session.py  tutor.py
src/api/: __init__.py
src/config/: settings.py
src/engine/: __init__.py  adaptive.py  diagnose.py  explain.py  grader.py  quiz.py  review.py
src/kid_agent/: __init__.py  agent.py  cli.py  config.py
src/knowledge/: __init__.py  api.py  crud.py  db.py  graph.py  import_kgraph.py  import_points.py  loader.py  math_g1g2.py  math_g3g5.py  math_g3g5_v2.py  math_g6.py  math_g7.py  math_g8g9.py  migrate_seed.py  multisubject.py  schema.sql  semantic_search.py  service.py
src/memory/: __init__.py  store.py  student.py
src/utils/: errors.py  logger.py
src/voice/: __init__.py  tts.py
src/web/: __init__.py  api.py  app.py  health.py  models.py  ws.py
tests/: integration.py  test_adaptive.py  test_deploy.py  test_grader.py  test_health.py  test_kid_agent.py  test_knowledge.py  test_planner.py  test_quiz.py  test_real_teaching.py  test_store.py  test_student.py  test_teaching_loop.py  test_voice.py  test_web_api.py  test_wechat.py
(+227 files in other folders)
