[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kid-agent"
version = "0.2.0"
description = "K-12 Math Tutoring Agent built on DeepTutor framework"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=13.0",
]
voice = [
    "edge-tts>=6.1.12",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]
all = [
    "kid-agent[web,voice,dev]",
]

[project.scripts]
kid-agent = "kid_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kid_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
